Drop JVM version probe; require Java 11+